--- a/smart_table/source/index.html.erb
+++ b/smart_table/source/index.html.erb
@@ -1,13 +1,5 @@
 ---
 title: Table
 ---
-<p>
-  Search
-  <input id = "Search" type = "text"/>
-</p>
-<p>Table <table id="mytable"></table></p>
-<p>
-  Input 
-    <div id = "Input"></div>
-    <button id = "Submit"> Add </button>
-</p>
+<table id="smartTable"></table>
+
